--- a/SubmitJobAuto/SubmitJobAuto.csproj
+++ b/SubmitJobAuto/SubmitJobAuto.csproj
@@ -38,6 +38,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Office.Interop.Outlook, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Outlook.15.0.4797.1003\lib\net20\Microsoft.Office.Interop.Outlook.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <Private>False</Private>
     </Reference>
@@ -56,10 +60,12 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="CodedUITest1.cs" />
     <Compile Include="CustomFun.cs" />
     <Compile Include="DateTimeTool.cs" />
     <Compile Include="Json.cs" />
+    <Compile Include="MailFun.cs" />
     <Compile Include="MenuFun.cs" />
     <Compile Include="MyFun.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
